--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>dodododo</title>
+    <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    Contentdasdsad
+    <main>
+        <div class="formos">
+            <div class="formaEN">
+          <label class="labelEn" for="EN">EN</label>
+            <input id="EN" type="text">
+        </div>
+        <div class="formaLT">
+            <label for="LT">LT</label>
+            <input id="LT" type="text">
+        </div>
+        <div class="buttons">
+            <button class="saveButton" id="saveButton">Save</button>
+            <button class="resetButton" id="resetButton">Reset</button>
+        </div>
+        </div>
+        <div class="lentele">
+            <tr>
+                <th>EN</th>
+                <th>LT</th> 
+                <th>Actions</th> 
+              </tr>
+        </div>
+    </main>
 </body>
 </html>
