--- a/index.html
+++ b/index.html
@@ -8,28 +8,40 @@
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-    <main>
-        <div class="formos">
-            <div class="formaEN">
-          <label class="labelEn" for="EN">EN</label>
-            <input id="EN" type="text">
-        </div>
-        <div class="formaLT">
-            <label for="LT">LT</label>
-            <input id="LT" type="text">
-        </div>
-        <div class="buttons">
-            <button class="saveButton" id="saveButton">Save</button>
-            <button class="resetButton" id="resetButton">Reset</button>
-        </div>
-        </div>
-        <div class="lentele">
-            <tr>
-                <th>EN</th>
-                <th>LT</th> 
-                <th>Actions</th> 
-              </tr>
-        </div>
-    </main>
+   
+<form>
+<div class="form-row">
+    <textarea placeholder="Kazkas"></textarea>
+
+</div>
+<div class="form-row">
+<input type="color">
+
+</div>
+<div class="form-row">
+<input type="date" name="" id="">
+
+</div>
+<div class="form-row">
+<input type="checkbox"> <span>Task is completed</span>
+
+</div>
+<div class="form-row">
+    <button type="submit" >Save</button>
+    <button type="reset" >Reset</button>
+
+
+</div>
+
+</form>
+
 </body>
 </html>
+
+
+<!-- Ka turi TODO daryti?
+    color;
+    deadline;
+    completed/not completed;
+
+-->
